--- a/tests/m3uParser.Tests/Sample.resx
+++ b/tests/m3uParser.Tests/Sample.resx
@@ -124,6 +124,9 @@
   <data name="format_specs" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\format_specs.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
+  <data name="hashsigns" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\hashsigns.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
   <data name="header_with_parameters" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\header-with-parameters.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
@@ -132,6 +135,9 @@
   </data>
   <data name="sample_paste_bin" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\sample_paste_bin.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
+  <data name="samsung" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\samsung.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
   <data name="simple_vod" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\simple_vod.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
